# tinytmx

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  docker-compose.yml
.github/workflows/: CMakeLinux.yml  CMakeMacOS.yml  CMakeWindows.yml
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
docs/: CHANGELOG.md  tmx-map-format.rst
lib/: CMakeLists.txt  tinytmx.h.in
lib/cmake/: tinytmx.pc.in  tinytmxConfig.cmake.in  tinytmxProjectSettings.cmake
lib/include/: tinytmx.hpp  tinytmxChunk.hpp  tinytmxColor.hpp  tinytmxDataChunkTile.hpp  tinytmxDataTileLayerHolder.hpp  tinytmxEllipse.hpp  tinytmxGrid.hpp  tinytmxGroupLayer.hpp  tinytmxImage.hpp  tinytmxImageLayer.hpp  tinytmxLayer.hpp  tinytmxMap.hpp  tinytmxMapTile.hpp  tinytmxObject.hpp  tinytmxObjectGroup.hpp  tinytmxParallax.hpp  tinytmxPolyObject.hpp  tinytmxProperty.hpp  tinytmxPropertySet.hpp  tinytmxTerrain.hpp  tinytmxTerrainArray.hpp  tinytmxText.hpp  tinytmxTile.hpp  tinytmxTileLayer.hpp  tinytmxTileOffset.hpp  tinytmxTileset.hpp  tinytmxTransformations.hpp  tinytmxUtil.hpp  tinytmxVector2.hpp  tinytmxWangColor.hpp  tinytmxWangSet.hpp  tinytmxWangSetArray.hpp  tinytmxWangTile.hpp
lib/include/tinytmx/: tinytmx.hpp  tinytmxDev.hpp
lib/src/: tinytmxChunk.cpp  tinytmxColor.cpp  tinytmxDataChunkTile.cpp  tinytmxDataTileLayerHolder.cpp  tinytmxEllipse.cpp  tinytmxGrid.cpp  tinytmxGroupLayer.cpp  tinytmxImage.cpp  tinytmxImageLayer.cpp  tinytmxLayer.cpp  tinytmxMap.cpp  tinytmxObject.cpp  tinytmxObjectGroup.cpp  tinytmxPolyObject.cpp  tinytmxProperty.cpp  tinytmxPropertySet.cpp  tinytmxTerrain.cpp  tinytmxTerrainArray.cpp  tinytmxText.cpp  tinytmxTile.cpp  tinytmxTileLayer.cpp  tinytmxTileOffset.cpp  tinytmxTileset.cpp  tinytmxTransformations.cpp  tinytmxUtil.cpp  tinytmxVector2.cpp  tinytmxWangColor.cpp  tinytmxWangSet.cpp  tinytmxWangSetArray.cpp  tinytmxWangTile.cpp
tests/: CMakeLists.txt  tinytmxlibtest.cpp
tests/fixtures/tmx/: all_layer_types.tmx  basic_finite_base64.tmx  basic_finite_csv.tmx  external_tileset.tsx  external_tileset_map.tmx  infinite_chunks_base64.tmx  infinite_chunks_csv.tmx  large_map_base64.tmx  large_map_csv.tmx  multi_tilesets.tmx  objects_shapes.tmx  properties_types.tmx  tileset_extras.tmx
tests/google_tests/: CMakeLists.txt  DefaultFiniteMapTest.cpp  FiniteMapTilesetImageCollection.cpp  FiniteOrthogonalMapObjectGroupTileObjectEmbedded.cpp  FiniteOrthogonalMapObjectGroupTileObjectTemplated.cpp  FiniteOrthogonalMapTiles.cpp  ModifiedFiniteMapTest.cpp  TilesetExternalFiniteOrthogonalMap.cpp  TilesetExternalFiniteOrthogonalMapObjectGroup.cpp  TilesetExternalFiniteOrthogonalMapObjectGroupLayer.cpp  TilesetFiniteMapTest.cpp  TilesetWangsetsFiniteOrthogonalMap.cpp
tests/google_tests/assets/: FiniteMapTilesetImageCollection.tmx  FiniteOrthogonalMap.tmx  FiniteOrthogonalMapObjectGroupTileObjectEmbedded.tmx  FiniteOrthogonalMapObjectGroupTileObjectTemplated.tmx  FiniteOrthogonalMapTiles.tmx  GrassExternalTileset.tsx  ModifiedFiniteOrthogonalMap.tmx  PolygonObjectTemplated.tx  TileObjectTemplatedFlower32.tx  TilesetExternalFiniteOrthogonalMap.tmx  TilesetExternalFiniteOrthogonalMapObjectGroup.tmx  TilesetExternalFiniteOrthogonalMapObjectGroupLayer.tmx  TilesetFiniteOrthogonalMap.tmx  TilesetWangsetsFiniteOrthogonalMap.tmx  blocks1TemplatedAddedSecondUsedFirst.tsx  blocks2TemplatedTileset.tsx
tests/google_tests/lib/googletest/src/: gtest.cc
